--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
 
   <header class="header">
     <div class="logo">
-      <i class="fas fa-music"></i> PlayYoutube By Wirk 👻
+      <i class="fas fa-music"></i> 🌻 PlayYoutube By Wirk 👻
     </div>
     <div class="creator-info">
-      Creador: +504 9373-2693
+     👾 Creador: +504 9373-2693 
     </div>
   </header>
 
   <div class="container">
     <form id="search-form">
-      <input type="text" id="search-input" placeholder=" ¡Busca tu música favorita ahora! 🎧" required />
-      <button type="submit">Buscar</button>
+      <input type="text" id="search-input" placeholder=" Busca Tu Video 📹" required />
+      <button type="submit">🔎 Buscar</button>
     </form>
 
     <div id="loading-message" style="display: none;">
@@ -128,7 +128,7 @@
         <span></span><span></span><span></span><span></span><span></span><span></span>
         <span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
-      <p id="loading-text">Buscando...</p>
+      <p id="loading-text">♾️ Buscando...</p>
     </div>
 
     <div class="music-list" id="music-list"></div>
