--- a/index.html
+++ b/index.html
@@ -5,167 +5,121 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ThePlayYoutube By Wirk 🐾</title>
 
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600;700&display=swap" rel="stylesheet">
-
-
   <style>
-    /* General Body Styles */
-    body {
-      font-family: 'Comfortaa', cursive; /* A softer, more playful font */
-      margin: 0;
-      background: url('https://images.unsplash.com/photo-1518791841217-8f162f1e1131?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed; /* Cat background image */
-      background-size: cover; /* Cover the entire background */
-      color: #4a4a4a; /* Dark grey for text */
-      line-height: 1.6;
-      min-height: 100vh;
-      position: relative; /* Needed for footer positioning */
-      padding-bottom: 100px; /* Add padding at the bottom for the player */
+    :root {
+      --main-color: #a07860;
+      --bg-overlay: rgba(255, 255, 255, 0.5);
+      --glass-bg: rgba(255, 255, 255, 0.85);
+      --accent-color: #ffe9d1;
+      --text-dark: #333;
     }
 
-    /* Add a semi-transparent overlay to make text more readable */
-    body::before {
-        content: '';
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white overlay */
-        z-index: -1; /* Place behind content */
-    }
-
-
-    /* Estilos para el reproductor de audio fijo */
-    #audio-player {
-      display: none;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: rgba(150, 100, 100, 0.8); /* Semi-transparent earthy tone */
-      padding: 15px 20px;
-      box-shadow: 0 -4px 15px rgba(0, 0, 0, 0.2);
-      z-index: 1000;
+    * {
       box-sizing: border-box;
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
-      backdrop-filter: blur(5px); /* Frosted glass effect */
-      color: white;
     }
 
-    /* Estilos del header */
+    body {
+      margin: 0;
+      font-family: 'Comfortaa', cursive;
+      background: url('https://images.unsplash.com/photo-1518791841217-8f162f1e1131?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: var(--text-dark);
+      min-height: 100vh;
+      padding-bottom: 100px;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      inset: 0;
+      background-color: var(--bg-overlay);
+      z-index: -1;
+    }
+
     .header {
-      background-color: rgba(150, 100, 100, 0.8); /* Match audio player or use a darker shade */
+      text-align: center;
+      padding: 30px 15px;
+      background: rgba(160, 120, 96, 0.85);
       color: white;
-      padding: 25px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
-      margin-bottom: 30px;
-      backdrop-filter: blur(5px); /* Frosted glass effect */
-      border-bottom-left-radius: 15px;
-      border-bottom-right-radius: 15px;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     }
 
     .logo {
-      font-size: 32px;
-      font-weight: 700; /* Bold font */
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+      font-size: 2rem;
+      font-weight: 700;
     }
 
     .creator-info {
-      font-size: 16px;
-      font-weight: 400; /* Regular font */
-      margin-top: 5px;
-      color: #ffe9d1; /* A light, warm color */
-      opacity: 0.9;
+      font-size: 1rem;
+      color: var(--accent-color);
     }
 
-    /* Estilos del contenedor principal */
     .container {
-      padding: 30px;
-      max-width: 700px; /* Slightly narrower container */
-      margin: 20px auto; /* Center container and add top margin */
-      background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+      max-width: 95%;
+      margin: 20px auto;
+      background: var(--glass-bg);
+      padding: 25px;
       border-radius: 15px;
-      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(5px); /* Frosted glass effect */
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      backdrop-filter: blur(10px);
     }
 
-    /* Estilos del formulario de búsqueda */
     #search-form {
       display: flex;
+      flex-direction: column;
       gap: 15px;
-      margin-bottom: 30px;
-      padding: 20px;
-      background-color: rgba(255, 255, 255, 0.7); /* More transparent background for form */
-      border-radius: 10px;
-      box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.1); /* Subtle inner shadow */
-      backdrop-filter: blur(5px); /* Frosted glass effect */
     }
 
     #search-input {
-      flex: 1;
-      padding: 14px 18px;
-      border: 1px solid #d3b8a4; /* Earthy border color */
-      border-radius: 8px;
-      outline: none;
+      padding: 14px;
       font-size: 1.1rem;
-      transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-      background-color: rgba(255, 255, 255, 0.6); /* Slightly transparent input */
+      border: 1px solid #d3b8a4;
+      border-radius: 10px;
+      background: rgba(255,255,255,0.6);
+      outline: none;
     }
 
     #search-input:focus {
-        border-color: #a07860; /* Darker earthy highlight on focus */
-        box-shadow: 0 0 8px rgba(160, 120, 96, 0.4);
-        background-color: rgba(255, 255, 255, 0.8);
+      border-color: var(--main-color);
+      box-shadow: 0 0 5px var(--main-color);
     }
 
     #search-form button {
-      padding: 14px 28px;
-      background-color: #a07860; /* Earthy button color */
+      padding: 14px;
+      background-color: var(--main-color);
       color: white;
       border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 600;
+      border-radius: 10px;
       font-size: 1.1rem;
-      transition: background-color 0.3s ease-in-out, transform 0.1s ease-in-out;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s, transform 0.2s;
     }
 
     #search-form button:hover {
-        background-color: #85634d; /* Darker shade on hover */
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      background-color: #704f3c;
     }
 
     #search-form button:active {
-        transform: scale(0.98); /* Slightly shrink on click */
-        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+      transform: scale(0.97);
     }
 
-
-    /* Estilos del cargador */
     .loader {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 6px;
-        margin-bottom: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 6px;
+      margin: 20px 0;
     }
 
     .loader span {
-      display: inline-block;
-      width: 12px; /* Larger dots */
-      height: 12px; /* Larger dots */
-      background-color: #a07860; /* Earthy color for dots */
+      width: 10px;
+      height: 10px;
+      background-color: var(--main-color);
       border-radius: 50%;
       animation: loader-animation 1s infinite alternate;
     }
@@ -173,282 +127,81 @@
     .loader span:nth-child(2) { animation-delay: 0.1s; }
     .loader span:nth-child(3) { animation-delay: 0.2s; }
     .loader span:nth-child(4) { animation-delay: 0.3s; }
-    .loader span:nth-child(5) { animation-delay: 0.4s; }
-    .loader span:nth-child(6) { animation-delay: 0.5s; }
-     .loader span:nth-child(7) { animation-delay: 0.6s; }
-    .loader span:nth-child(8) { animation-delay: 0.7s; }
-    .loader span:nth-child(9) { animation-delay: 0.8s; }
-    .loader span:nth-child(10) { animation-delay: 0.9s; }
-    .loader span:nth-child(11) { animation-delay: 1.0s; }
-    .loader span:nth-child(12) { animation-delay: 1.1s; }
-
 
     @keyframes loader-animation {
       from { transform: scale(0.7); opacity: 0.6; }
-      to { transform: scale(1.1); opacity: 1; }
+      to { transform: scale(1.2); opacity: 1; }
     }
 
-    #loading-message {
-      text-align: center;
-      margin-top: 20px;
-      color: #85634d; /* Darker earthy text color */
-      font-size: 1.2rem;
-      font-weight: 600;
-    }
-
-    /* Styling for the music list container */
     .music-list {
-        margin-top: 20px;
-        display: grid; /* Use grid for potentially better layout options */
-        gap: 15px; /* Space between grid items */
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
 
-    /* Styling for individual result items */
     .result-item {
-        background-color: rgba(255, 255, 255, 0.9); /* Nearly opaque white for list items */
-        padding: 15px;
-        border-radius: 10px;
-        box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
-        transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-        border: 1px solid rgba(211, 184, 164, 0.5); /* Soft border */
-        display: flex; /* Use flexbox to arrange content inside the item */
-        align-items: center; /* Vertically align items */
-        gap: 15px; /* Space between elements in the flex container */
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      transition: transform 0.2s ease;
     }
 
     .result-item:hover {
-        transform: translateY(-5px); /* More pronounced hover effect */
-        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+      transform: translateY(-3px);
     }
 
-    .result-item img {
-        width: 100px; /* Fixed width for thumbnail */
-        height: auto; /* Maintain aspect ratio */
-        border-radius: 8px; /* Rounded corners for image */
-        object-fit: cover; /* Cover the area without distortion */
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    #audio-player {
+      display: none;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: rgba(150, 100, 100, 0.9);
+      color: white;
+      padding: 10px 20px;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+      backdrop-filter: blur(5px);
+      text-align: center;
+      font-size: 1rem;
+      z-index: 1000;
     }
 
-    .result-item .item-details {
-        flex-grow: 1; /* Allow details to take up available space */
+    @media screen and (min-width: 600px) {
+      #search-form {
+        flex-direction: row;
+      }
+
+      #search-input {
+        flex: 1;
+      }
     }
-
-    .result-item h3 {
-        margin: 0 0 8px 0; /* Add some space below the title */
-        font-size: 1.1rem;
-        color: #4a4a4a;
-        word-break: break-word; /* Prevent long titles from overflowing */
-    }
-
-    .result-item .item-buttons {
-        display: flex;
-        gap: 10px; /* Space between buttons */
-        flex-shrink: 0; /* Prevent buttons from shrinking */
-    }
-
-
-     .result-item button {
-        background-color: #6a994e; /* Greenish-brown play button */
-        color: white;
-        border: none;
-        padding: 10px 15px; /* Adjusted padding */
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 0.9rem;
-        transition: background-color 0.3s ease-in-out, transform 0.1s ease-in-out;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        display: flex; /* Use flex to center icon and text */
-        align-items: center;
-        gap: 5px; /* Space between icon and text */
-     }
-
-     .result-item button:hover {
-        background-color: #567d3e; /* Darker green on hover */
-        box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-     }
-
-    .result-item button:active {
-        transform: scale(0.98);
-    }
-
-    .result-item .download-button {
-         background-color: #a07860; /* Earthy color for download button */
-    }
-
-     .result-item .download-button:hover {
-        background-color: #85634d; /* Darker earthy color on hover */
-     }
-
-
-     /* Responsive adjustments */
-    @media (max-width: 600px) {
-        .result-item {
-            flex-direction: column; /* Stack items vertically on small screens */
-            align-items: flex-start; /* Align items to the start */
-        }
-
-        .result-item img {
-            width: 100%; /* Full width for image on small screens */
-            max-width: 200px; /* Limit max width even when stacked */
-            margin-bottom: 10px; /* Space below image */
-        }
-
-        .result-item .item-buttons {
-            width: 100%; /* Make buttons take full width */
-            justify-content: space-around; /* Distribute buttons */
-            margin-top: 10px; /* Space above buttons */
-        }
-
-         .result-item button {
-            flex-grow: 1; /* Allow buttons to grow */
-            justify-content: center; /* Center button content */
-         }
-    }
-
-
   </style>
 </head>
-
 <body>
-
-  <header class="header">
-    <div class="logo">
-      <i class="fas fa-cat"></i> 🐾 PlayYoutube By Wirk 👻
-    </div>
-    <div class="creator-info">
-     👾 Creador: +504 9373-2693
-    </div>
-  </header>
+  <div class="header">
+    <div class="logo">🎵 ThePlayYoutube</div>
+    <div class="creator-info">Creado por Wirk 🐾</div>
+  </div>
 
   <div class="container">
     <form id="search-form">
-      <input type="text" id="search-input" placeholder=" Busca Tu Video 📹" required />
-      <button type="submit"><i class="fas fa-paw"></i> Buscar</button>
+      <input id="search-input" type="text" placeholder="Buscar canción o video..." />
+      <button type="submit"><i class="fas fa-search"></i> Buscar</button>
     </form>
 
-    <div id="loading-message" style="display: none;">
-      <div class="loader">
-        <span></span><span></span><span></span><span></span><span></span><span></span>
-        <span></span><span></span><span></span><span></span><span></span><span></span>
-      </div>
-      <p id="loading-text">Buscando la canción perfecta...</p>
+    <div class="loader" id="loader" style="display:none;">
+      <span></span><span></span><span></span><span></span>
     </div>
 
-    <div class="music-list" id="music-list">
-      </div>
+    <div class="music-list" id="results"></div>
   </div>
 
-  <audio id="audio-player" controls></audio>
-
-  <script src="api.js"></script>
-  <script>
-    const audioPlayer = document.getElementById("audio-player");
-    const loadingMessage = document.getElementById('loading-message');
-    const loadingText = document.getElementById('loading-text');
-    const musicList = document.getElementById('music-list'); // Get the music list container
-
-    function reproducirCancion(url) {
-      audioPlayer.src = url;
-      audioPlayer.style.display = "block";
-      audioPlayer.play();
-    }
-
-    // You will need to implement the descargarVideo function in your api.js or here
-    function descargarVideo(url) {
-        // Logic to handle video download
-        console.log("Downloading video from:", url);
-        // This might involve opening the URL in a new tab, or more complex
-        // server-side handling depending on your API.
-        window.open(url, '_blank'); // Example: Open URL in new tab (might trigger download for some links)
-    }
-
-
-    audioPlayer.addEventListener("ended", () => {
-      // Decide if you want to hide the player or just pause
-      // audioPlayer.style.display = "none";
-      console.log("Audio playback ended.");
-    });
-
-    // ANIMACIÓN DE CARGA
-    const originalLoadingText = "Buscando la canción perfecta";
-    let loadingInterval;
-    let dotCount = 0;
-
-    function startLoadingAnimation() {
-        dotCount = 0; // Reset dot count
-        loadingText.textContent = originalLoadingText + "..."; // Initial text
-        loadingMessage.style.display = "block"; // Show loading message
-        musicList.innerHTML = ''; // Clear previous results when loading starts
-
-
-        loadingInterval = setInterval(() => {
-            dotCount = (dotCount + 1) % 4;
-            let dots = '.'.repeat(dotCount);
-            loadingText.textContent = originalLoadingText + dots;
-        }, 500); // Adjust speed as needed
-    }
-
-    function stopLoadingAnimation() {
-        clearInterval(loadingInterval);
-        loadingMessage.style.display = "none"; // Hide loading message
-        loadingText.textContent = originalLoadingText; // Reset text without dots
-    }
-
-
-    // You will need to add an event listener to your search form
-    // and call startLoadingAnimation() when the form is submitted,
-    // then call stopLoadingAnimation() after your API call completes
-    // and you have displayed the results in the musicList div.
-
-    // Example (replace with your actual search logic):
-    // document.getElementById('search-form').addEventListener('submit', async (event) => {
-    //     event.preventDefault();
-    //     const searchTerm = document.getElementById('search-input').value;
-    //     startLoadingAnimation();
-    //
-    //     // Call your API here to get search results
-    //     // const results = await fetchSearchResults(searchTerm); // Assuming you have this function
-    //
-    //     // After getting results, display them:
-    //     // displayResults(results); // Assuming you have a function to display results
-    //
-    //     stopLoadingAnimation();
-    // });
-
-
-    // Function to display results (example structure you need to implement)
-    /*
-    function displayResults(results) {
-        musicList.innerHTML = ''; // Clear previous results
-        if (results && results.length > 0) {
-            results.forEach(result => {
-                const resultItem = document.createElement('div');
-                resultItem.classList.add('result-item');
-
-                resultItem.innerHTML = `
-                    <img src="${result.thumbnailUrl}" alt="${result.title} thumbnail">
-                    <div class="item-details">
-                        <h3>${result.title}</h3>
-                    </div>
-                    <div class="item-buttons">
-                        <button class="play-audio-button" onclick="reproducirCancion('${result.audioUrl}')">
-                            <i class="fas fa-play"></i> Audio
-                        </button>
-                        <button class="download-button" onclick="descargarVideo('${result.videoUrl}')">
-                            <i class="fas fa-download"></i> Descargar
-                        </button>
-                    </div>
-                `; // Assuming your API returns objects with thumbnailUrl, title, audioUrl, and videoUrl
-
-                musicList.appendChild(resultItem);
-            });
-        } else {
-            musicList.innerHTML = '<p style="text-align: center;">No se encontraron resultados de gatitos 😿.</p>';
-        }
-    }
-    */
-
-  </script>
-
+  <div id="audio-player">
+    Reproduciendo...
+  </div>
 </body>
 </html>
